[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[features]
async_components = []
full = ["async_components"]

[lib]
# Do some stuff


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
futures = "0.3.28"
