[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[features]
async_client = []
streams = ["async_client"]
schema_registry = []
full = ["async_client", "streams"]

[lib]
# Do some stuff


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
futures = "0.3.28"
serde = "1.0.175"
thiserror = "1.0.44"
tokio = { version="1.29.1", features=["macros", "test-util", "rt-multi-thread"] }