[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[features]
async_client = []
streams = ["async_client"]
schema_registry = []
full = ["async_client", "streams"]

[lib]
# Do some stuff


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16.0"
async-trait = "0.1.72"
chrono = "0.4.26"
futures = "0.3.28"
log = "0.4.20"
prost = "0.12.1"
serde = { version="1.0.175", features=["derive"]}
serde_json = "1.0.107"
thiserror = "1.0.44"
tokio = { version="1.29.1", features=["macros", "test-util", "rt-multi-thread"] }

[dev-dependencies]
std-logger = "0.5.2"